old/k8s/valheim.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: valheim
  template:
    metadata:
      labels:
        app: valheim
    spec:
      containers:
      - name: valheim
        image: lloesche/valheim-server:latest
        ports:
        - containerPort: 2456
          protocol: UDP
        - containerPort: 2457
          protocol: UDP
        volumeMounts:
        - name: config-storage
          mountPath: /config
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: valheim-ebs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: valheim-server
  labels:
    app: valheim
spec:
  selector:
    app: valheim
  ports:
    - name: game
      protocol: UDP
      port: 2456
      targetPort: 2456
    - name: query
      protocol: UDP
      port: 2457
      targetPort: 2457
